--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/vue": "^2.0.13",
     "@tailwindcss/forms": "^0.5.3",
     "axios": "^1.2.1",
+    "firebase": "^11.0.1",
     "vue": "^3.2.25",
     "vue-router": "^4.1.6",
     "vuex": "^4.1.0"
