--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.4",
+    "autoprefixer": "^10.4.20",
     "tailwindcss": "^3.2.4",
     "vite": "^2.9.15"
   }
