--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@tailwindcss/forms": "^0.5.3",
     "axios": "^1.2.1",
     "firebase": "^11.0.1",
+    "katex": "^0.13.24",
+    "mathjax": "^3.2.2",
+    "mathjax-full": "^3.2.2",
+    "vatex": "^0.1.0",
     "vue": "^3.2.25",
     "vue-router": "^4.1.6",
     "vuex": "^4.1.0"
