--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@tailwindcss/forms": "^0.5.3",
     "axios": "^1.2.1",
     "firebase": "^11.0.1",
-    "vue": "^3.2.25",
+    "mathjs": "^14.0.0",
+    "vue": "^3.5.13",
     "vue-router": "^4.1.6",
     "vuex": "^4.1.0"
   },
