--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "axios": "^1.2.1",
     "firebase": "^11.0.1",
     "katex": "^0.13.24",
-    "latex-to-js": "^1.0.0",
     "mathjax": "^3.2.2",
     "mathjax-full": "^3.2.2",
     "mathjs": "^14.0.0",
+    "moo": "^0.5.2",
+    "tex-math-parser": "^2.0.4",
     "vatex": "^0.1.0",
     "vue": "^3.2.25",
     "vue-router": "^4.1.6",
